--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,21 +4,30 @@
 name: Java CI with Maven
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
+        steps:
+            # Use JDK 1.8
+            - uses: actions/checkout@v2
+            - name: Set up JDK 1.8
+              uses: actions/setup-java@v1
+              with:
+                  java-version: 1.8
 
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+            # Build and package the code
+            - name: Build with Maven
+              run: mvn -B package --file pom.xml
+
+            # Upload the war file to support security scans
+            - name: Upload war file
+              uses: actions/upload-artifact@v2
+              with:
+                  name: warfile
+                  path: target/verademo.war
