--- a/.github/workflows/veracode-analysis.yml
+++ b/.github/workflows/veracode-analysis.yml
@@ -14,13 +14,16 @@ on:
 jobs:
     # This workflow contains a job to build and submit pipeline scan, you will need to customize the build process accordingly and make sure the artifact you build is used as the file input to the pipeline scan file parameter
     build-and-pipeline-scan:
+        # Wait on build
+        needs: build
+
         # The type of runner that the job will run on
         runs-on: ubuntu-latest
         steps:
-            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it and copies all sources into ZIP file for submitting for analysis. Replace this section with your applications build steps
-            - uses: actions/checkout@v2
-              with:
-                  repository: ""
+            ## Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it and copies all sources into ZIP file for submitting for analysis. Replace this section with your applications build steps
+            #- uses: actions/checkout@v2
+            #  with:
+            #      repository: ""
 
             # Download war file to scan
             - name: Download war file to scan
@@ -28,16 +31,16 @@ jobs:
               with:
                   name: warfile
 
-            - uses: papeloto/action-zip@v1
-              with:
-                  files: /
-                  recursive: true
-                  dest: veracode-pipeline-scan-results-to-sarif.zip
+            #- uses: papeloto/action-zip@v1
+            #  with:
+            #      files: /
+            #      recursive: true
+            #      dest: veracode-pipeline-scan-results-to-sarif.zip
 
-            - uses: actions/upload-artifact@v1
-              with:
-                  name: my-artifact
-                  path: veracode-pipeline-scan-results-to-sarif.zip
+            #- uses: actions/upload-artifact@v1
+            #  with:
+            #      name: my-artifact
+            #      path: veracode-pipeline-scan-results-to-sarif.zip
 
             # download the Veracode Static Analysis Pipeline scan jar
             - uses: wei/curl@master
@@ -45,20 +48,29 @@ jobs:
                   args: -O https://downloads.veracode.com/securityscan/pipeline-scan-LATEST.zip
             - run: unzip -o pipeline-scan-LATEST.zip
 
+            # Setup java for the pipeline scan
             - uses: actions/setup-java@v1
               with:
                   java-version: 1.8
+
+            # Run the pipeline scan
             - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file target/verademo.war
               continue-on-error: true
+
+            # Upload scan results
             - uses: actions/upload-artifact@v1
               with:
                   name: ScanResults
                   path: results.json
+
+            # Convert scan data to SARIF
             - name: Convert pipeline scan output to SARIF format
               id: convert
               uses: veracode/veracode-pipeline-scan-results-to-sarif@master
               with:
                   pipeline-results-json: results.json
+
+            # Upload SARIF file
             - uses: github/codeql-action/upload-sarif@v1
               with:
                   # Path to SARIF file relative to the root of the repository
