--- a/.github/workflows/veracode-analysis.yml
+++ b/.github/workflows/veracode-analysis.yml
@@ -12,8 +12,30 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+    build:
+        runs-on: ubuntu-latest
+
+        steps:
+            # Use JDK 1.8
+            - uses: actions/checkout@v2
+            - name: Set up JDK 1.8
+              uses: actions/setup-java@v1
+              with:
+                  java-version: 1.8
+
+            # Build and package the code
+            - name: Build with Maven
+              run: mvn -B package --file pom.xml
+
+            # Upload the war file to support security scans
+            - name: Upload war file
+              uses: actions/upload-artifact@v2
+              with:
+                  name: warfile
+                  path: target/verademo.war
+
     # This workflow contains a job to build and submit pipeline scan, you will need to customize the build process accordingly and make sure the artifact you build is used as the file input to the pipeline scan file parameter
-    build-and-pipeline-scan:
+    pipeline-scan:
         # Wait on build
         needs: build
 
