--- a/.github/workflows/veracode-analysis.yml
+++ b/.github/workflows/veracode-analysis.yml
@@ -75,6 +75,9 @@ jobs:
               with:
                   java-version: 1.8
 
+            # List fiels
+            - run: ls -lR
+
             # Run the pipeline scan
             - run: java -jar pipeline-scan.jar --veracode_api_id "${{secrets.VERACODE_API_ID}}" --veracode_api_key "${{secrets.VERACODE_API_KEY}}" --fail_on_severity="Very High, High" --file target/verademo.war
               continue-on-error: true
